--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>com.infochimps.wukong</groupId>
   <artifactId>wukong-storm</artifactId>
   <packaging>jar</packaging>
-  <version>1.3.1-SNAPSHOT</version>
+  <version>1.4.0-SNAPSHOT</version>
   <name>wukong-storm</name>
   <url>http://github.com/infochimps-labs/wukong-storm</url>
 
@@ -73,7 +73,7 @@
     <dependency>
       <groupId>storm</groupId>
       <artifactId>storm</artifactId>
-      <version>0.8.1</version>
+      <version>0.9.0</version>
       <scope>provided</scope>
     </dependency>
 
@@ -87,13 +87,7 @@
     <dependency>
       <groupId>storm</groupId>
       <artifactId>storm-kafka</artifactId>
-      <version>0.8.0-wip2</version>
-    </dependency>
-
-    <dependency>
-      <groupId>org.elasticsearch</groupId>
-      <artifactId>elasticsearch</artifactId>
-      <version>0.19.8</version>
+      <version>0.9.0-wip16a-scala292</version>
     </dependency>
 
     <dependency>
@@ -110,7 +104,7 @@
     <dependency>
       <groupId>com.infochimps</groupId>
       <artifactId>storm-util</artifactId>
-      <version>1.3.1-SNAPSHOT</version>
+      <version>1.7.0-SNAPSHOT</version>
     </dependency>
     
   </dependencies>
